--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -802,7 +802,7 @@ a.nav-link:hover {
 
 /*-------------------------------------------*/
 .button-for-language:hover {
-    background: #5AC8D8;
+    /*background: #5AC8D8;*/
 }
 /*-------------------------------------------*/
 
